<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_event_list"
        android:enabled="true"
        android:icon="@mipmap/ic_reorder_black_24dp"
        android:title="Events"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_event_map"
        android:enabled="true"
        android:icon="@mipmap/ic_map_black_24dp"
        android:title="Map"
        app:showAsAction="ifRoom" />
</menu>